# game-of-python

./: game_of_life.py  pyproject.toml  test_game_of_life.py
